// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DatePicker click can open picker 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
    <div
      class="g-datepicker-panel-wrapper"
    >
      <div
        class="g-datepicker-day-picker"
      >
        <header
          class="g-datepicker-day-picker-header"
        >
          header
        </header>
        <main
          class="g-datepicker-day-picker-content"
        >
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-title"
            >
              日
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              一
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              二
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              三
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              四
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              五
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              六
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item"
            >
              1
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              2
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              3
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              4
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              5
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              6
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              7
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item"
            >
              8
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              9
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              10
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              11
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              12
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              13
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              14
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item"
            >
              15
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              16
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              17
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              18
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              19
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              20
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              21
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item"
            >
              22
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              23
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              24
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              25
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              26
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              27
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              28
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item"
            >
              29
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              30
            </span>
            <span
              class="g-datepicker-day-picker-item"
            >
              31
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              1
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              2
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              3
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              4
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              5
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              6
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              7
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              8
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              9
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              10
            </span>
            <span
              class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
            >
              11
            </span>
          </span>
        </main>
        <footer>
          footer
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker click can open picker 2`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker onchange can work 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value="2023-01-01"
        width="200"
      />
      <span
        class="g-input-clear"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-clear"
          />
        </svg>
      </span>
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker should Render Correctly 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="点击输入日期"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
